# genius

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  INSTALL.MacOSX  MAINTAINERS  Makefile.am  NEWS  README  README.md  RELEASE_TODO  TODO  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  genius.applications  genius.doap  genius.keys  genius.mime  genius.spec.in  genius.xml  meson.build  meson_options.txt  readline-4.0.patch
atblas/: COPYING  Makefile.am  Makefile.in  README  configure  configure.ac
atblas/blas/: Makefile.am  Makefile.in
atblas/cblas/: Makefile.am  Makefile.in
atblas/tests/: Makefile.am  Makefile.in  level1.c
atlapack/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
atlapack/lapack/: Makefile.am  Makefile.in
atlapack/lapacke/: Makefile.am  Makefile.in
atlapack/tests/: Makefile.am  Makefile.in  dgesvd.c  test-utils.h
examples/: Makefile.am  cantor.gel  complex-analysis-argument-principle.gel  complex-analysis-mandelbrot-define.gel  complex-analysis-mandelbrot-set.gel  complex-analysis-mesh.gel  complex-analysis-newton-fractal.gel  complex-analysis-wandering-ball.gel  dalemb-pulse.gel  duffing-equation-trajectories.gel  easy-matrix-examples.gel  eulers-method-exp-run.gel  eulers-method-graphs-exp.gel  explicit-fdm-heat-line.gel  explicit-fdm-heat.gel  fourier-series-animation.gel  fourier-series-half-sawtooth.gel  fourier-series-plotting.gel  laplace-fdm.gel  lefthand-rule-doubling.gel  linapprox.gel  lorenz.gel  meson.build  midpoint-rule-doubling.gel  newton-calc-sqrt2.gel  newton-sqrt2.gel  peano-restrictions.gel  peano.gel  plane-curves.gel  plot-ode-runge-kutta.gel  plot-ode-trajectory-runge-kutta.gel  riemann-integral-darboux.gel  riemann-integral.gel  rsa.gel  shocks.gel  sierpinski.gel  standing-waves.gel  strange-attractor.gel  taylor-exp.gel  taylor-sin.gel  (+4 more)
gtkextra/: .cvsignore  .gitignore  CONVERTEDTO3  Makefile.am  gtkextra-compat.h  gtkextra-marshal.c  gtkextra-marshal.h  gtkextra.c  gtkextra.h  gtkextratypebuiltins.c  gtkextratypebuiltins.c.template  gtkextratypebuiltins.h  gtkextratypebuiltins.h.template  gtkplot.c  gtkplot.h  gtkplot3d.c  gtkplot3d.h  gtkplotarray.c  gtkplotarray.h  gtkplotbar.c  gtkplotbar.h  gtkplotbox.c  gtkplotbox.h  gtkplotcairo.c  gtkplotcairo.h  gtkplotcandle.c  gtkplotcandle.h  gtkplotcanvas.c  gtkplotcanvas.h  gtkplotcanvasellipse.c  gtkplotcanvasellipse.h  gtkplotcanvasline.c  gtkplotcanvasline.h  gtkplotcanvaspixmap.c  gtkplotcanvaspixmap.h  gtkplotcanvasplot.c  gtkplotcanvasplot.h  gtkplotcanvasrectangle.c  gtkplotcanvasrectangle.h  gtkplotcanvastext.c  (+26 more)
help/: HOWTO-FOR-TRANSLATORS  Makefile.am  genius.omf.in  genius.txt  make-makefile-am.sh  meson.build  omf.make  update-po.sh  update-xml-to-txt-html.sh
help/C/: .cvsignore  Makefile.am  about.xml  ch01.html  ch02.html  ch02s02.html  ch03.html  ch03s02.html  ch03s03.html  ch04.html  ch04s02.html  ch04s03.html  ch04s04.html  ch04s05.html  ch05.html  ch05s03.html  ch05s05.html  ch05s06.html  ch05s07.html  ch06.html  ch06s03.html  ch06s04.html  ch06s05.html  ch06s06.html  ch06s07.html  ch06s09.html  ch07.html  ch07s03.html  ch07s04.html  ch07s05.html  ch07s06.html  ch08.html  ch08s02.html  ch08s03.html  ch09.html  ch10.html  ch11.html  ch11s02.html  ch11s03.html  ch11s04.html  (+60 more)
help/cs/: cs.po  genius.xml
help/de/: de.po  genius.xml
help/el/: el.po  genius.help.el.po  genius.xml
help/es/: es.po  genius.xml
help/fr/: fr.po  genius.xml
help/kk/: kk.po
help/pt_BR/: genius.xml  pt_BR.po
help/ru/: genius.xml  ru.po
help/sr/: sr.po
help/sv/: genius.xml  sv.po
lib/: .cvsignore  .gitignore  Makefile.am  library-strings.c  make_inner_loader_gel.sh  make_loader_gel.sh  make_top_loader_gel.sh  meson.build
lib/calculus/: Makefile.am  differentiation.gel  fourier.gel  integration.gel  limits.gel  meson.build  sums_products.gel
lib/combinatorics/: Makefile.am  factorial.gel  meson.build  misc.gel  recursive_sequences.gel
lib/commutative_algebra/: Makefile.am  macaulay.gel  meson.build
lib/equation_solving/: Makefile.am  diffeqs.gel  find_root.gel  formulas.gel  meson.build  newton.gel
lib/functions/: Makefile.am  complex_numbers.gel  delta.gel  elementary.gel  kernels.gel  lambert.gel  meson.build  numerical.gel  orthogonal_polynomials.gel
lib/linear_algebra/: .cvsignore  Makefile.am  bilinear_forms.gel  linear_algebra.gel  meson.build  misc.gel  special_matrices.gel  subspaces.gel
lib/misc/: Makefile.am  meson.build  misc.gel
lib/number_theory/: Makefile.am  factoring.gel  meson.build  misc.gel  modulus.gel  primes.gel  quadratic.gel
lib/sets/: .gitignore  Makefile.am  basic.gel  meson.build
lib/statistics/: Makefile.am  basic.gel  meson.build
lib/symbolic/: Makefile.am  differentiation.gel  meson.build
pixmaps/: Makefile.am  meson.build
pixmaps/16x16/: Makefile.am
pixmaps/22x22/: Makefile.am
pixmaps/24x24/: Makefile.am
pixmaps/256x256/: Makefile.am
pixmaps/32x32/: Makefile.am
pixmaps/48x48/: Makefile.am
pixmaps/8x8/: Makefile.am
pixmaps/scalable/: Makefile.am
src/: .cvsignore  .gitignore  Makefile.am  binreloc.c  binreloc.h  calc.c  calc.h  compil.c  compil.h  dict.c  dict.h  eval.c  eval.h  examples.c  examples.h  extra.h  funclib.c  funclib.h  funclibhelper.cP  geloutput.c  geloutput.h  genius-i18n.h  genius-readline-helper.c  genius.c  genius.lang  genius_lists.c  geniustest.pl  geniustests.txt  gnome-genius.c  gnome-genius.desktop  gnome-genius.desktop.in  gnome-genius.h  graphing.c  graphing.h  inter.c  inter.h  lexer.h  lexer.l  lib.gel  longtest.gel  (+36 more)
tutors/: Makefile.am  eulers-method-graphs-exp.gel  fourier-series-animation.gel  laplace-fdm.gel  linapprox.gel  lorenz.gel  standing-waves.gel  strange-attractor.gel
ve/: .cvsignore  .gitignore  ChangeLog  Makefile.am  glade-helper.c  glade-helper.h  meson.build  test-ve-config.c  ve-config.c  ve-config.h  ve-gnome.c  ve-i18n.h  ve-misc.c  ve-misc.h  ve-miscui.c  ve-miscui.h  ve-nongnome.c  vicious.h  viciousui.h
vte/: HACKING  Makefile.am  README  configure.in
vte/src/: .gitignore  (+6 more)
(+683 files in other folders)
