option('gnome', type: 'boolean', value: true, description: 'Build with GNOME frontend')
option('gtksourceview', type: 'boolean', value: true, description: 'Use GtkSourceView library')
option('update_mimedb', type: 'boolean', value: true, description: 'Update mime database after installation')
option('extra_gcc_optimization', type: 'boolean', value: true, description: 'Enable extra GCC optimization')
option('binreloc', type: 'boolean', value: true, description: 'Enable binary relocation')
