## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS	= foreign
SUBDIRS			= lapack lapacke tests

#JL: we probably don't want to do this
#dist_doc_DATA		= README COPYING

EXTRA_DIST		= \
	README COPYING INSTALL			\
	\
	machine-dependent/LAPACK_version.f	\
	machine-dependent/dlamch.f		\
	machine-dependent/dlamchf77.f		\
	machine-dependent/dsecnd_EXT_ETIME.f	\
	machine-dependent/dsecnd_EXT_ETIME_.f	\
	machine-dependent/dsecnd_INT_CPU_TIME.f	\
	machine-dependent/dsecnd_INT_ETIME.f	\
	machine-dependent/dsecnd_NONE.f		\
	machine-dependent/ilaver.f		\
	machine-dependent/lsame.f		\
	machine-dependent/second_EXT_ETIME.f	\
	machine-dependent/second_EXT_ETIME_.f	\
	machine-dependent/second_INT_CPU_TIME.f	\
	machine-dependent/second_INT_ETIME.f	\
	machine-dependent/second_NONE.f		\
	machine-dependent/slamch.f		\
	machine-dependent/slamchf77.f

### end of file
