exampledir = \
	$(datadir)/genius/examples/
example_DATA = \
	cantor.gel \
	dalemb-pulse.gel \
	eulers-method-exp-run.gel \
	eulers-method-graphs-exp.gel \
	explicit-fdm-heat.gel \
	laplace-fdm.gel \
	linapprox.gel \
	lorenz.gel \
	newton-calc-sqrt2.gel \
	newton-sqrt2.gel \
	shocks.gel \
	sierpinski.gel \
	standing-waves.gel \
	strange-attractor.gel \
	taylor-exp.gel \
	taylor-sin.gel \
	fourier-series-animation.gel \
	fourier-series-plotting.gel \
	rsa.gel \
	easy-matrix-examples.gel \
	peano.gel \
	vibrating-drumhead-modes.gel \
	complex-analysis-newton-fractal.gel \
	complex-analysis-mandelbrot-set.gel \
	complex-analysis-mandelbrot-define.gel \
	complex-analysis-wandering-ball.gel \
	complex-analysis-mesh.gel \
	riemann-integral.gel \
	riemann-integral-darboux.gel

EXTRA_DIST = \
	$(example_DATA)
