exampledir = \
	$(datadir)/genius/examples/
example_DATA = \
	cantor.gel \
	dalemb-pulse.gel \
	eulers-method-exp-run.gel \
	eulers-method-graphs-exp.gel \
	explicit-fdm-heat.gel \
	explicit-fdm-heat-line.gel \
	laplace-fdm.gel \
	linapprox.gel \
	lorenz.gel \
	newton-calc-sqrt2.gel \
	newton-sqrt2.gel \
	shocks.gel \
	sierpinski.gel \
	standing-waves.gel \
	strange-attractor.gel \
	duffing-equation-trajectories.gel \
	taylor-exp.gel \
	taylor-sin.gel \
	fourier-series-animation.gel \
	fourier-series-plotting.gel \
	rsa.gel \
	easy-matrix-examples.gel \
	peano.gel \
	peano-restrictions.gel \
	vibrating-drumhead-modes.gel \
	complex-analysis-newton-fractal.gel \
	complex-analysis-mandelbrot-set.gel \
	complex-analysis-mandelbrot-define.gel \
	complex-analysis-wandering-ball.gel \
	complex-analysis-mesh.gel \
	complex-analysis-argument-principle.gel \
	riemann-integral.gel \
	riemann-integral-darboux.gel \
	plot-ode-runge-kutta.gel \
	plot-ode-trajectory-runge-kutta.gel \
	plane-curves.gel \
	zoom-differentiability.gel

EXTRA_DIST = \
	$(example_DATA)
